--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "ayush payasi",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.29.0",
     "@sendgrid/mail": "^7.4.5",
     "aws-sdk": "^2.927.0",
     "axios": "^0.21.1",
