--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "node-postgres": "^0.6.2",
     "nodemailer": "^6.6.1",
