--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "next": "^11.1.2",
     "node-postgres": "^0.6.2",
     "nodemailer": "^6.6.1",
     "nodemon": "^2.0.7",
