--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
     "pm2": "^5.1.0",
-    "razorpay": "^2.0.6"
+    "razorpay": "^2.0.6",
+    "ssl-root-cas": "^1.3.1"
   }
 }
